tests/broken/for-no-expression.stderr
error: Expected an expression that is iterable
 --> tests/broken/for-no-expression.rs:4:33
  |
4 | #[oxiplate = "{%- for number in -%}{{ number }} + {{ number_to_add }} = {{ numb + number_to_add }}{% endfor %}"]
  |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
